@@ -10,6 +10,9 @@ version 2.5.5 (??/??/????):
 	* Beta support for SSL connections for AIM and ICQ accounts.  To
 	  enable, check the "Use SSL" option from the Advanced tab when
 	  editing your AIM or ICQ account. (Paul Aurich)
+	* Fix retrieval of ICQ status messages from users of ICQ 6.x, Miranda,
+	  and other libpurple clients (fixes with libpurple users only on
+	  statuses other than Available). (Daniel Ljungborg)
 
 	Finch:
 	* Allow rebinding keys to change the focused widget (details in the
